desktop/toolkit/cosmic-theme/src/output/snapshots/cosmic_theme__output__qt_output__tests__dark_default_kcolorscheme.snap
---
source: cosmic-theme/src/output/qt_output.rs
assertion_line: 565
expression: dark_default_kcolorscheme
---
# GENERATED BY COSMIC

[ColorEffects:Disabled]
Color=49,49,49
ColorAmount=0
ColorEffect=0
ContrastAmount=0.65
ContrastEffect=1
IntensityAmount=0.1
IntensityEffect=2

[ColorEffects:Inactive]
ChangeSelectionColor=false
Enable=false
Color=27,27,27
ColorAmount=0.025
ColorEffect=2
ContrastAmount=0.1
ContrastEffect=2
IntensityAmount=0
IntensityEffect=0

[Colors:Button]
BackgroundAlternate=0,92,254
BackgroundNormal=69,69,69
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:Complementary]
BackgroundAlternate=0,92,254
BackgroundNormal=27,27,27
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:Header]
BackgroundAlternate=26,30,36
BackgroundNormal=27,27,27
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:Header][Inactive]
BackgroundAlternate=26,30,36
BackgroundNormal=27,27,27
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:Selection]
BackgroundAlternate=15,56,129
BackgroundNormal=0,92,254
DecorationFocus=0,92,254
DecorationHover=0,92,254
ForegroundActive=58,58,58
ForegroundInactive=32,74,147
ForegroundLink=27,27,27
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=58,58,58
ForegroundPositive=94,219,140
ForegroundVisited=0,92,254

[Colors:Tooltip]
BackgroundAlternate=41,44,51
BackgroundNormal=42,42,42
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:View]
BackgroundAlternate=41,44,51
BackgroundNormal=42,42,42
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:Window]
BackgroundAlternate=26,30,36
BackgroundNormal=27,27,27
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=171,171,171
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=187,187,187
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[General]
ColorScheme=CosmicDark
Name=COSMIC Dark
shadeSortColumn=true

[Icons]
Theme=breeze-dark

[KDE]
contrast=4
widgetStyle=qt6ct-style

[WM]
activeBackground=27,27,27
activeBlend=143,183,255
activeForeground=143,183,255
inactiveBackground=27,27,27
inactiveBlend=143,183,255
inactiveForeground=143,183,255
