desktop/toolkit/cosmic-theme/src/output/snapshots/cosmic_theme__output__qt_output__tests__light_default_kcolorscheme.snap
---
source: cosmic-theme/src/output/qt_output.rs
assertion_line: 559
expression: light_default_kcolorscheme
---
# GENERATED BY COSMIC

[ColorEffects:Disabled]
Color=187,187,187
ColorAmount=0
ColorEffect=0
ContrastAmount=0.65
ContrastEffect=1
IntensityAmount=0.1
IntensityEffect=2

[ColorEffects:Inactive]
ChangeSelectionColor=false
Enable=false
Color=215,215,215
ColorAmount=0.025
ColorEffect=2
ContrastAmount=0.1
ContrastEffect=2
IntensityAmount=0
IntensityEffect=0

[Colors:Button]
BackgroundAlternate=0,64,192
BackgroundNormal=161,161,161
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=0,64,192
ForegroundInactive=76,76,76
ForegroundLink=0,64,192
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=61,61,61
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[Colors:Complementary]
BackgroundAlternate=0,92,254
BackgroundNormal=68,68,68
DecorationFocus=143,183,255
DecorationHover=143,183,255
ForegroundActive=143,183,255
ForegroundInactive=212,212,212
ForegroundLink=143,183,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=228,228,228
ForegroundPositive=94,219,140
ForegroundVisited=143,183,255

[Colors:Header]
BackgroundAlternate=206,209,214
BackgroundNormal=215,215,215
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=0,64,192
ForegroundInactive=76,76,76
ForegroundLink=0,64,192
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=61,61,61
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[Colors:Header][Inactive]
BackgroundAlternate=206,209,214
BackgroundNormal=215,215,215
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=0,64,192
ForegroundInactive=76,76,76
ForegroundLink=0,64,192
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=61,61,61
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[Colors:Selection]
BackgroundAlternate=119,147,205
BackgroundNormal=0,64,192
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=233,233,233
ForegroundInactive=128,157,215
ForegroundLink=215,215,215
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=233,233,233
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[Colors:Tooltip]
BackgroundAlternate=229,232,237
BackgroundNormal=238,238,238
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=0,64,192
ForegroundInactive=76,76,76
ForegroundLink=0,64,192
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=61,61,61
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[Colors:View]
BackgroundAlternate=229,232,237
BackgroundNormal=238,238,238
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=0,64,192
ForegroundInactive=76,76,76
ForegroundLink=0,64,192
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=61,61,61
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[Colors:Window]
BackgroundAlternate=206,209,214
BackgroundNormal=215,215,215
DecorationFocus=0,64,192
DecorationHover=0,64,192
ForegroundActive=0,64,192
ForegroundInactive=76,76,76
ForegroundLink=0,64,192
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=61,61,61
ForegroundPositive=0,87,44
ForegroundVisited=0,64,192

[General]
ColorScheme=CosmicLight
Name=COSMIC Light
shadeSortColumn=true

[Icons]
Theme=breeze

[KDE]
contrast=4
widgetStyle=qt6ct-style

[WM]
activeBackground=215,215,215
activeBlend=215,215,215
activeForeground=0,64,192
inactiveBackground=215,215,215
inactiveBlend=215,215,215
inactiveForeground=0,64,192
